--- a/index.html
+++ b/index.html
@@ -56,9 +56,10 @@
                     <ul class="skills__list">
                         <li><span>HTML5, CSS3</span></li>
                         <li><span>SASS</span></li>
-                        <li><span>Less</span></li>
+                        <li><span>Gulp</span></li>
                         <li><span>GIT</span></li>
                         <li><span>JavaScript</span></li>
+                        <li><span>Less</span></li>
                         <li><span>Web design</span></li>
                         <li><span>UI / UX design</span></li>
                         <li><span>Figma</span></li>
