--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="robots" content="index, follow">
     <meta name="google" content="notranslate">
+    <meta name="google-site-verification" content="wfvgnzT_285vO4Jb7ecU07KoR2KhkLF-sFhQFLLyWJk" />
     <meta name="format-detection" content="telephone=no">
     <meta name="description" content="Create a great website with wonderful design">
     <meta name="keywords" content="Alex Sklonin, markup developer, web designer, best web design, app design, best web designer, clean code, site fast, responsive">
